// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApprovalResult renders approval result with error type 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderTopLeftRadius": 20,
      "borderTopRightRadius": 20,
      "minHeight": 200,
      "paddingBottom": 20,
      "paddingTop": 24,
    }
  }
>
  <View
    style={
      {
        "paddingHorizontal": 24,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ca35421a",
            "borderRadius": 24,
            "height": 48,
            "justifyContent": "center",
            "width": 48,
          }
        }
      >
        <SvgMock
          color="#ca3542"
          fill="currentColor"
          height={24}
          name="Warning"
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          width={24}
        >
          Icon
        </SvgMock>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "space-between",
          "margin": 16,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      />
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Bold",
            "fontSize": 18,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Error
      </Text>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
          }
        }
      />
    </View>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingBottom": 16,
          "textAlign": "center",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Error message
      </Text>
    </Text>
  </View>
  <View
    collapsable={false}
    style={
      {
        "flex": 0,
        "justifyContent": "center",
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
      testID="bottomsheetfooter"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#121314",
            "borderRadius": 12,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="bottomsheetfooter-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "Geist Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          OK
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`ApprovalResult renders approval result with success type 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderTopLeftRadius": 20,
      "borderTopRightRadius": 20,
      "minHeight": 200,
      "paddingBottom": 20,
      "paddingTop": 24,
    }
  }
>
  <View
    style={
      {
        "paddingHorizontal": 24,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#457a391a",
            "borderRadius": 24,
            "height": 48,
            "justifyContent": "center",
            "width": 48,
          }
        }
      >
        <SvgMock
          color="#457a39"
          fill="currentColor"
          height={24}
          name="Confirmation"
          style={
            {
              "height": 24,
              "width": 24,
            }
          }
          width={24}
        >
          Icon
        </SvgMock>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "height": 32,
          "justifyContent": "space-between",
          "margin": 16,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      />
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Bold",
            "fontSize": 18,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Success
      </Text>
      <View
        style={
          {
            "alignItems": "flex-end",
            "flex": 1,
          }
        }
      />
    </View>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingBottom": 16,
          "textAlign": "center",
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Success message
      </Text>
    </Text>
  </View>
  <View
    collapsable={false}
    style={
      {
        "flex": 0,
        "justifyContent": "center",
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "flexDirection": "row",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
      testID="bottomsheetfooter"
    >
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "#121314",
            "borderRadius": 12,
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="bottomsheetfooter-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#ffffff",
              "fontFamily": "Geist Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          OK
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;
